@@ -666,41 +666,31 @@ declare 36 win {
 	    UINT message, WPARAM wParam, LPARAM lParam)
 }
 
-# new for 8.4.20+, Cygwin only
+# new for 8.4.20+/8.5.12+, Cygwin only
 declare 37 win {
     void TkCreateXEventSource(void)
 }
 declare 38 win {
-    void TkFreeWindowId(TkDisplay *dispPtr, Window w)
-}
-declare 39 win {
-    void TkInitXId(TkDisplay *dispPtr)
-}
-declare 40 win {
     int TkpCmapStressed(Tk_Window tkwin, Colormap colormap)
 }
-declare 41 win {
+declare 39 win {
     void TkpSync(Display *display)
 }
-declare 42 win {
+declare 40 win {
     Window TkUnixContainerId(TkWindow *winPtr)
 }
-declare 43 win {
+declare 41 win {
     int TkUnixDoOneXEvent(Tcl_Time *timePtr)
 }
-declare 44 win {
+declare 42 win {
     void TkUnixSetMenubar(Tk_Window tkwin, Tk_Window menubar)
 }
-declare 45 win {
+declare 43 win {
     void TkWmCleanup(TkDisplay *dispPtr)
 }
-declare 46 win {
+declare 44 win {
     void TkSendCleanup(TkDisplay *dispPtr)
 }
-declare 47 win {
-    void TkFreeXId(TkDisplay *dispPtr)
-}
-
 ################################
 # Mac specific functions
 
